--- a/5x5_protoboard.cmp
+++ b/5x5_protoboard.cmp
@@ -1,4 +1,18 @@
-Cmp-Mod V01 Created by CvPcb (2013-may-18)-stable date = Thu 28 Aug 2014 00:01:54 CEST
+Cmp-Mod V01 Created by CvPcb (2013-may-18)-stable date = Thu 28 Aug 2014 20:17:46 CEST
+
+BeginCmp
+TimeStamp = /53FF7346;
+Reference = C1;
+ValeurCmp = u33;
+IdModule  = SM0603_Capa;
+EndCmp
+
+BeginCmp
+TimeStamp = /53FF75B7;
+Reference = C2;
+ValeurCmp = u1;
+IdModule  = SM0603_Capa;
+EndCmp
 
 BeginCmp
 TimeStamp = /53DD4216;
